[tool.poetry]
name = "crawl2slack"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
click = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
